Base de datos añadida

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,23 @@
     <title>Pagina de Inicio</title>
 </head>
 <body>
-    <h1>Index desde el archivo</h1>
+    <h1>Registrar Participante</h1>
+    <form action="sendForm()" method="post">
+        <label for="fullname">Nombre Completo</label>
+        <input type="text" name="name" id="">
+        <br>
+        <label for="">Estilo</label>
+        <br>
+        <label for="pecho">Pecho</label>
+        <input type="checkbox" name="pecho" value="pecho">
+        <label for="pecho">Crol</label>
+        <input type="checkbox" name="crol" value="crol">
+        <label for="pecho">Espalda</label>
+        <input type="checkbox" name="espalda" value="espalda">
+        <label for="pecho">Mariposa</label>
+        <input type="checkbox" name="mariposa" value="mariposa">
+
+    </form>
+    <script src="../scripts//form.js"></script>
 </body>
 </html>
