--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
         <label for="">Estilo</label>
         <br>
         <label for="pecho">Pecho</label>
-        <input type="checkbox" name="pecho" value="pecho">
+        <input type="checkbox" name="pecho" id="pecho" value="pecho">
         <label for="pecho">Crol</label>
         <input type="checkbox" name="crol" value="crol">
         <label for="pecho">Espalda</label>
