id a los inputs añadidos

--- a/views/index.html
+++ b/views/index.html
@@ -10,18 +10,18 @@
     <h1>Registrar Participante</h1>
     <form action="sendForm()" method="post">
         <label for="fullname">Nombre Completo</label>
-        <input type="text" name="name" id="">
+        <input type="text" name="fullname" id="fullname">
         <br>
         <label for="">Estilo</label>
         <br>
         <label for="pecho">Pecho</label>
         <input type="checkbox" name="pecho" id="pecho" value="pecho">
         <label for="pecho">Crol</label>
-        <input type="checkbox" name="crol" value="crol">
+        <input type="checkbox" name="crol" id="crol" value="crol">
         <label for="pecho">Espalda</label>
-        <input type="checkbox" name="espalda" value="espalda">
+        <input type="checkbox" name="espalda" id="espalda" value="espalda">
         <label for="pecho">Mariposa</label>
-        <input type="checkbox" name="mariposa" value="mariposa">
+        <input type="checkbox" name="mariposa" id="mariposa" value="mariposa">
 
     </form>
     <script src="../scripts//form.js"></script>
