--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,6 @@
         <input type="checkbox" name="mariposa" id="mariposa" value="mariposa">
 
     </form>
-    <script src="../scripts//form.js"></script>
+    <script src="../scripts/form.js"></script>
 </body>
 </html>
