literalmente un boton

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
         <input type="checkbox" name="espalda" id="espalda" value="espalda">
         <label for="pecho">Mariposa</label>
         <input type="checkbox" name="mariposa" id="mariposa" value="mariposa">
-
+        <input id="submit" type="submit" value="Enviar">
     </form>
     <script src="../scripts//form.js"></script>
 </body>
